--- a/views/game.ejs
+++ b/views/game.ejs
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hash Game</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
     <header>
-        <h1>hello</h1>
+        
     </header>
     <main>
         
@@ -15,53 +17,44 @@
     <script>
         var socket = io();
     </script>
+    <script>
+        players: {
+            name: ""
+        }
+        let o;
+        let x;
+        let winner;
+    </script>
 
-        <div class="main-block">
-            <div class="blocks-row-1">
-                <div id="block-1" class="blocks "></div>
-                <div id="block-2" class="blocks"></div>
-                <div id="block-3" class="blocks"></div>
+        <div class="main-square">
+            <div class="blocks-row">
+                <div id="square-1" class="square" onclick="">
+                    <% 
+                        if (player == x) {
+                            
+                        }
+                        if (player == o) {
+                            
+                        }
+                     %>
+                    
+                </div>
+                <div id="square-2" class="square"><img class="o" src="circle.svg"></div>
+                <div id="square-3" class="square"></div>
              </div>
-            <div class="blocks-row-2">
-                <div id="block-4" class="blocks"></div>
-                <div id="block-5" class="blocks"></div>
-                <div id="block-6" class="blocks"></div>
+            <div class="square-row">
+                <div id="square-4" class="square"></div>
+                <div id="square-5" class="square"></div>
+                <div id="square-6" class="square"></div>
             </div>
-            <div class="blocks-row-3">
-                <div id="block-7" class="blocks"></div>
-                <div id="block-8" class="blocks"></div>
-                <div id="block-9" class="blocks"></div>
+            <div class="square-row">
+                <div id="square-7" class="square"></div>
+                <div id="square-8" class="square"></div>
+                <div id="square-9" class="square"></div>
             </div>
             
         </div>
-        
     </main>
 
-<style>
-
-* {margin: 0; padding: 0;}
-main {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-}
-
-.main-block {
-    display: flex;
-    width: 50%;
-    height: 50%;
-}
-.blocks {
-    display: flex;
-    border: 0.4vh solid black;
-    width: 20vh;
-    height: 20vh;
-}
-.blocks-row-1 {display: flex; flex-direction: column; align-items: flex-start;}
-.blocks-row-2 {display: flex; flex-direction: column; align-items: center;}
-.blocks-row-3 {display: flex; flex-direction: column; align-items: center;}
-
-</style>
 </body>
 </html>
