--- a/public/style.css
+++ b/public/style.css
@@ -6,38 +6,23 @@ main {
     width: 100%;
     height: 100%;
 }
-
-.main-square {
-    display: flex;
+.board {
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    background-image: url("pngwing.com.png");
 }
-.square {
-    display: flex;
-    width: 25vh;
-    height: 25vh;
-}
-#square-1 {border-bottom: 0.4vh solid black;border-right: 0.4vh solid black;}
-#square-2 {border-bottom: 0.4vh solid black;border-right: 0.4vh solid black;}
-#square-3 {border-right: 0.4vh solid black;}
-#square-4 {border-bottom: 0.4vh solid black;border-right: 0.4vh solid black;}
-#square-5 {border-bottom: 0.4vh solid black;border-right: 0.4vh solid black;}
-#square-6 {border-right: 0.4vh solid black;}
-#square-7 {border-bottom: 0.4vh solid black;}
-#square-8 {border-bottom: 0.4vh solid black;}
-
-.square-row {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.board button {
+    background-color: transparent;
+    width: 20vh;
+    height: 20vh;
 }
 
-.x {
-    width: 90%;
-    height: 90%;
-    margin-left: 1vh;
-    margin-top: 1vh;
+.square-x {
+    background-image: url("x.svg");
 }
 
-.o {
-    width: 25vh;
+.square-o {
+    background-image: url("x.svg");
 }
 
