--- a/views/game.ejs
+++ b/views/game.ejs
@@ -16,7 +16,7 @@
           <p>{{ message }}</p>
 
           <div class="board">
-            <button v-for="squares in game._board._squares" @click="plays(squares)" :class="{'square-x': squares.turn == 'x', 'square-o': squares.turn == 'o'}">
+            <button v-for="squares in game._board._squares" @click="plays(squares)">
               {{ squares.turn }}
             </button>
           </div>
@@ -28,29 +28,10 @@
           <button @click="start()" class="btn">play</button>  
         </div>
       </div>
-<!--           
-        </div>
-        <div class="main-square">
-          <div class="square-row">
-              <div id="square-1" class="square"></div>
-              <div id="square-2" class="square"></div>
-              <div id="square-3" class="square"></div>
-           </div>
-          <div class="square-row">
-              <div id="square-4" class="square"></div>
-              <div id="square-5" class="square"></div>
-              <div id="square-6" class="square"></div>
-          </div>
-          <div class="square-row">
-              <div id="square-7" class="square"></div>
-              <div id="square-8" class="square"></div>
-              <div id="square-9" class="square"></div>
-          </div>
-      </div>
-         -->
     </main>
 </body>
 <script src="/socket.io/socket.io.js"></script>
-<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<!-- <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script> -->
+<script src="/vendor/vue/dist/vue.global.js"></script>
 <script setup type="module" src="/js/Client.js"></script>
 </html>
